[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo-udeps.ignore]
normal = [
	"currency-factory",
	"oracle",
	"pallet-bonded-finance",
	"pallet-vault",
	"session-benchmarking",
	"vault"
]

[dependencies]
frame-system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
executive = { package = "frame-executive", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

# primitives
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

# modules
aura = { package = "pallet-aura", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
authorship = { package = "pallet-authorship", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
membership = { package = "pallet-membership", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
scheduler = { package = "pallet-scheduler", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
session = { package = "pallet-session", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
sudo = { package = "pallet-sudo", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
treasury = { package = "pallet-treasury", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
utility = { package = "pallet-utility", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "17a791edf431d7d7aee1ea3dfaeeb7bc21944301", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "17a791edf431d7d7aee1ea3dfaeeb7bc21944301", default-features = false }
smallvec = "1.6.1"

# local modules
common = { path = "../runtime/common", default-features = false }
primitives = { path = "../runtime/primitives", default-features = false }
oracle = { package = "pallet-oracle", path = "../frame/oracle", default-features = false }
vault = { package = "pallet-vault", path = "../frame/vault", default-features = false }
currency-factory = { package = "pallet-currency-factory", path = "../frame/currency-factory", default-features = false }
composable-traits = { path = "../frame/composable-traits" , default-features = false}
call-filter = { package = "pallet-call-filter", path = "../frame/call-filter", default-features = false }
assets-registry = { package = "pallet-assets-registry", path = "../frame/assets-registry", default-features = false, optional = true}
governance-registry = { package = "pallet-governance-registry", path = "../frame/governance-registry", default-features = false, optional = true}
assets = { package = "pallet-assets", path = "../frame/assets", default-features = false, optional = true}

# Used for the node template's RPCs
system-rpc-runtime-api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }

# Used for runtime benchmarking
benchmarking = { package = "frame-benchmarking", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false, optional = true }
system-benchmarking = { package = "frame-system-benchmarking", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# Parachain Utilities
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
collator-selection = { package = "pallet-collator-selection", git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
session-benchmarking = { package = "cumulus-pallet-session-benchmarking", git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }


# added on top of runtime for emulation of network
paste = "1.0.5"
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
xcm-emulator = { git = "https://github.com/dzmitry-lahoda-forks/xcm-simulator", branch = "dz/0.9.13", default-features = false }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
picasso-runtime = { package = "dali-runtime", path = "../runtime/dali", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["std", "develop"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-io/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
    "support/std",
	"executive/std",
    "frame-system/std",
	"utility/std",
	"authorship/std",
	"balances/std",
	"randomness-collective-flip/std",
	"timestamp/std",
	"session/std",
	"sudo/std",
	"indices/std",
	"oracle/std",
	"vault/std",
	"currency-factory/std",
	"orml-tokens/std",
	"orml-traits/std",
	"treasury/std",
	"democracy/std",
	"scheduler/std",
	"common/std",
	"picasso-runtime/std",
	"primitives/std",
	"collective/std",
	"transaction-payment/std",
	"parachain-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-pallet-xcm/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"collator-selection/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"aura/std",
	"sp-consensus-aura/std",
    "scale-info/std",
]

runtime-benchmarks = [
	"benchmarking",
	"support/runtime-benchmarks",
	"system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"balances/runtime-benchmarks",
	"timestamp/runtime-benchmarks",
	"oracle/runtime-benchmarks",
	"collective/runtime-benchmarks",
	"collator-selection/runtime-benchmarks",
	"session-benchmarking/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"indices/runtime-benchmarks",
	"membership/runtime-benchmarks",
	"treasury/runtime-benchmarks",
	"scheduler/runtime-benchmarks",
	"collective/runtime-benchmarks",
	"democracy/runtime-benchmarks",
	"utility/runtime-benchmarks",
	"kusama-runtime/runtime-benchmarks",
]

develop = [
	"assets",
	"assets-registry",
	"governance-registry",
]