[package]
authors = ["Composable Developers"]
build = "build.rs"
edition = "2021"
homepage = "https://composable.finance"
name = "composable-node"
version = "2.1.6"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = "3.1.6"
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }

# Local Dependencies
common = { path = "../runtime/common" }
composable-runtime = { path = "../runtime/composable", optional = true }
dali-runtime = { path = "../runtime/dali", optional = true }
ibc-rpc = { path = "../frame/ibc/ibc-rpc" }
ibc-runtime-api = { path = "../frame/ibc/ibc-runtime-api" }
ibc-primitives = { path = "../frame/ibc/ibc-primitives" }
picasso-runtime = { path = "../runtime/picasso" }
primitives = { path = "../runtime/primitives" }

pallet-assets = { path = "../frame/assets" }
pallet-crowdloan-rewards = { path = "../frame/crowdloan-rewards" }

assets-rpc = { path = "../frame/assets/rpc" }
assets-runtime-api = { path = "../frame/assets/runtime-api" }
crowdloan-rewards-rpc = { path = "../frame/crowdloan-rewards/rpc" }
crowdloan-rewards-runtime-api = { path = "../frame/crowdloan-rewards/runtime-api" }
lending-rpc = { path = "../frame/lending/rpc" }
lending-runtime-api = { path = "../frame/lending/runtime-api" }
pablo-rpc = { path = "../frame/pablo/rpc" }
pablo-runtime-api = { path = "../frame/pablo/runtime-api" }

# FRAME Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

## Substrate Client Dependencies
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-service = { git = "https://github.com/paritytech/substrate", features = [
  "wasmtime",
], branch = "polkadot-v0.9.22" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

## Substrate Primitive Dependencies
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", features = [
  "rococo-native",
], branch = "release-v0.9.22" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

[dev-dependencies]
hex = "0.4.3"

[features]
composable = ["composable-runtime"]
dali = ["dali-runtime"]
default = []
ocw = []
runtime-benchmarks = [
  "polkadot-service/runtime-benchmarks",
  "picasso-runtime/runtime-benchmarks",
  "composable-runtime/runtime-benchmarks",
  "dali-runtime/runtime-benchmarks",
]
std = ["picasso-runtime/std", "composable-runtime/std", "dali-runtime/std"]


[package.metadata.cargo-udeps.ignore]
normal = ["pallet-bonded-finance"]
