[package]
name = "hyperspace-parachain"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]
resolver = "2"

[build-dependencies]
subxt-codegen = { git = "https://github.com/paritytech/subxt", rev = "81175b2dd9a2391f71c37d4612644ee65825e2f1" }
jsonrpsee = { version = "0.14.0", features = ["async-client", "client-ws-transport", "http-client"] }
frame-metadata = { version = "15.0.0", features = ["v14", "std"] }
syn = "1.0.98"
codec = { package = "parity-scale-codec", version = "3.0.0" }
color-eyre = "0.6.2"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[dependencies]
primitives = { path = "../primitives", package = "hyperspace-primitives" }

# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
log = "0.4.17"
log4rs = "1.1.1"
env_logger = "0.9.0"
hex = "0.4.3"
tokio = { version = "1.19.2", features = ["macros", "sync"] }
rs_merkle = "1.2.0"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
hex-literal = "0.3.4"
serde_json = "1.0.74"
derive_more = { version = "0.99", features = ["from"]  }
serde = {version="1.0.137", features = ["derive"]}
tokio-stream = { version = "0.1.9", features = ["sync"]}
thiserror = "1.0.31"
itertools = "0.10.3"
jsonrpsee = "0.15.1"
jsonrpsee-ws-client = "0.14.0"

# substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = ["full_crypto"] }
ss58-registry = "1.28.0"
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

subxt = { git = "https://github.com/paritytech/subxt", rev = "81175b2dd9a2391f71c37d4612644ee65825e2f1" }
beefy-primitives = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
beefy-mmr = { package = "pallet-beefy-mmr", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-mmr = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
transaction-payment-rpc = { package = "pallet-transaction-payment-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
transaction-payment-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# composable
ibc = { git = "https://github.com/composableFi/ibc-rs", rev = "c599cbcbf2c7a413a21a181f65dcf374f5ad75be", features = [] }
ibc-proto = { git = "https://github.com/composableFi/ibc-rs", rev = "c599cbcbf2c7a413a21a181f65dcf374f5ad75be" }
tendermint-proto = { git = "https://github.com/composableFi/tendermint-rs", rev = "5a74e0f8da4d3dab83cc04b5f1363b018cf3d9e8" }
light-client-common = { git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
ibc-rpc = { git = "https://github.com/ComposableFi/composable", rev = "e360d73d5632f84fb53ad4a20d7a49f0de05947e" }
pallet-ibc = { git = "https://github.com/ComposableFi/composable", rev = "e360d73d5632f84fb53ad4a20d7a49f0de05947e" }
ping = { package = "pallet-ibc-ping",  git = "https://github.com/ComposableFi/composable", rev = "e360d73d5632f84fb53ad4a20d7a49f0de05947e" }
ibc-primitives = { git = "https://github.com/ComposableFi/composable", rev = "e360d73d5632f84fb53ad4a20d7a49f0de05947e" }
common = { git = "https://github.com/ComposableFi/composable", rev = "e360d73d5632f84fb53ad4a20d7a49f0de05947e" }

# Beefy
beefy-prover = { git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
beefy-light-client = { git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
beefy-light-client-primitives = {  git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
ics11-beefy = { git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

# Grandpa
grandpa-prover = { git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
grandpa-light-client = { git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
grandpa-light-client-primitives = { git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
ics10-grandpa = { git = "https://github.com/ComposableFi/centauri", rev = "55c92796310416ac81addb5850e44a166be8c4c1" }
finality-grandpa-rpc = { package = "sc-finality-grandpa-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[dev-dependencies]
derive_more = "0.99.17"
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
clap = {version = "3.2.0", features = ["derive"]}
state-machine = { package = "sp-state-machine", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
prost = "0.10"
primitives = { path = "../primitives", package = "hyperspace-primitives" }

[features]
testing = ["primitives/testing"]
