[package]
name = "price-feed"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
enum_derive = "0.1.7"
custom_derive = "0.1.7"
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1.9", features = [ "full" ] }
tokio-stream = "0.1"
url = "1.7.0"
chrono = "0.4.19"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
jsonrpc-core = "18.0.0"
jsonrpc-client-transports = "18.0.0"
clap = { version = "3.0.0-rc.4", features = [ "derive" ] }
warp = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
futures = "0.3"
lazy_static = "1.4.0"
binance = "0.17"
