[package]
name = "hyperspace-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
hex = "0.4.3"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
thiserror = "1.0.31"

# substrate
subxt = { git = "https://github.com/composableFi/subxt", rev = "37df0ee525252fa9a3e7730629ce0de4da9e68fd" }

# ibc
ibc = { git = "https://github.com/composableFi/ibc-rs", rev = "9a959faabb8f2869e88327ea65a49f5697dcadf6", features = [] }
ibc-proto = { git = "https://github.com/composableFi/ibc-rs", rev = "9a959faabb8f2869e88327ea65a49f5697dcadf6" }
pallet-ibc = { git = "https://github.com/ComposableFi/composable", rev = "306930b2cc573574fe7e044cc55972f3d7de4dff" }
ibc-rpc = { git = "https://github.com/ComposableFi/composable", rev = "306930b2cc573574fe7e044cc55972f3d7de4dff" }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "sync"] }

[features]
testing = []