[package]
name = "hyperspace-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Composable Developers"]

[dependencies]
# crates.io
anyhow = "1.0.65"
futures = "0.3.21"
async-trait = "0.1.53"
hex = "0.4.3"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
thiserror = "1.0.31"

# substrate
subxt = { git = "https://github.com/paritytech/subxt", rev = "81175b2dd9a2391f71c37d4612644ee65825e2f1" }

# ibc
ibc = { git = "https://github.com/composableFi/ibc-rs", rev = "c599cbcbf2c7a413a21a181f65dcf374f5ad75be", features = [] }
ibc-proto = { git = "https://github.com/composableFi/ibc-rs", rev = "c599cbcbf2c7a413a21a181f65dcf374f5ad75be" }
pallet-ibc = { git = "https://github.com/ComposableFi/composable", rev = "e360d73d5632f84fb53ad4a20d7a49f0de05947e" }
ibc-rpc = { git = "https://github.com/ComposableFi/composable", rev = "e360d73d5632f84fb53ad4a20d7a49f0de05947e" }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "sync"] }

[features]
testing = []